# level2-3-cv-finalproject-cv-01

./: .gitignore  README.md  docker-compose.yaml  drawing_pattern.csv  package-lock.json  requirements.txt
airflow/: airflow.cfg  pyproject.toml  stock_data.ipynb
airflow/dags/: candle_pattern.py  cnn_predict.py  renew_data.py  sentiment_predict.py  time_series_predict.py  update_stocks.py
airflow/dags/cnn_model/: cnn_model.py
airflow/dags/database/: database.py
airflow/dags/model/: __init__.py  rasterize.py
airflow/dags/pattern_match/: __init__.py  pattern_match.py
airflow/dags/sentiment_model/: __init__.py  news_inference.py
airflow/dags/ts_model/: __init__.py  ar_pred.py  hmm_pred.py  lstm_pred.py
airflow/dags/ts_model/weight/: lstm_model.pth
airflow/dags/utils/: __init__.py  date_func.py  sql_query.py
airflow/logs/scheduler/: latest
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/airflow/: airflow.db
backend/airflow/dags/: func_test.ipynb  predict.py  renew_data.py
backend/airflow/dags/database/: database.py
backend/airflow/dags/model/: cnn_model.py  (+1 more)
backend/app/: api.py  config.py  database.py  schemas.py
backend/model/: __init__.py  inference.py
backend/utils/: __init__.py  candle_matching.py  candle_patterns_db.csv  newsdata.py  score.py
model/: MLProject  config.json  csv_to_pickle.py  dataset.py  get_stock_data.py  model.py  pyproject.toml  stock_config.json  train.py
model/base/: base_data_loader.py  base_model.py  base_stock_dataset.py  base_trainer.py
model/data_generate/: csv_to_pickle.py
model/data_generate/transform_func/: rasterize.py
model/data_loader/: data_loaders.py
model/model/: metric.py  model.py
model/trainer/: trainer.py
model/utils/: rasterize.py
model_training/: MLProject  README.md  config.json  pyproject.toml  train.py
model_training/base/: __init__.py  base_stock_dataset.py
model_training/data_generate/: get_stock_data.py
model_training/model/: loss.py  model.py
model_training/trainer/: trainer.py
(+233 files in other folders)
