[tool.poetry]
name = "airflow"
version = "0.1.0"
description = "airflow env settings"
authors = ["chaea <chaea11s0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.16.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
