[tool.poetry]
name = "backend"
version = "0.1.0"
description = "back env settings"
authors = ["chaea <chaea11s0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
yfinance = "^0.2.37"
numpy = "^1.26.4"
fastapi-users = "^12.1.3"
loguru = "^0.7.2"
sqlmodel = "^0.0.16"
pydantic-settings = "^2.2.1"
websockets = "^12.0"
pydantic = "^2.6.3"
httptools = "^0.6.1"
httpx-oauth = "^0.13.2"
mysql-connector-python = "^8.3.0"
pymysql = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
